--- a/server/public/index.css
+++ b/server/public/index.css
@@ -1,21 +1,40 @@
 .chatlog {
-  background-color: pink;
   width: 100%;
-  height: 300px;
+  text-align: center;
 }
 
 h1 {
   text-align: center;
-  font-size: 40px;
-  color: purple;
+  font-size: 60px;
+  color: #4db8ff;
+  font-family: 'Lobster', cursive;
 }
 
 #message {
-  width: 100%;
+  width: 79%;
   height: 50px;
   text-align: center;
+  float: left;
+  font-size: 18px;
+}
+
+#submit {
+  width: 20%;
+  float:left;
+  height: 54px;
+  background-color: #4db8ff;
+  color: white;
+  font-family: 'Lobster', cursive;
+  font-size: 25px;
+  border: solid 1px #b3b3b3;
 }
 
 p {
   font-size: 20px;
+  background-color: #ff4d4d;
+  border-radius: 20px;
+  color: white;
+  margin-right: 65%;
+  box-sizing: border-box;
+  padding: 8px 0 8px 0;
 }
