--- a/server/public/index.css
+++ b/server/public/index.css
@@ -1,5 +1,5 @@
 .chatlog {
-  width: 100%;
+  width: 99%;
   text-align: center;
 }
 
@@ -10,12 +10,14 @@ h1 {
   font-family: 'Lobster', cursive;
 }
 
-#message {
+.input {
   width: 79%;
   height: 50px;
   text-align: center;
   float: left;
-  font-size: 18px;
+  font-size: 16px;
+  font-family: sans-serif;
+  letter-spacing: 1px;
 }
 
 #submit {
@@ -29,12 +31,22 @@ h1 {
   border: solid 1px #b3b3b3;
 }
 
-p {
-  font-size: 20px;
+.msg {
+  font-size: 16px;
   background-color: #ff4d4d;
   border-radius: 20px;
   color: white;
   margin-right: 65%;
   box-sizing: border-box;
   padding: 8px 0 8px 0;
+  margin-left: 20px;
+  font-family: sans-serif;
+  letter-spacing: 1px;
+}
+
+.username {
+  font-size: 16px;
+  font-family: sans-serif;
+  letter-spacing: 1px;
+  float: left;
 }
