--- a/server/public/index.css
+++ b/server/public/index.css
@@ -1,6 +1,7 @@
 .chatlog {
   width: 99%;
   text-align: center;
+  height: 300px;
 }
 
 h1 {
@@ -36,12 +37,11 @@ h1 {
   background-color: #ff4d4d;
   border-radius: 20px;
   color: white;
-  margin-right: 65%;
   box-sizing: border-box;
   padding: 8px 0 8px 0;
-  margin-left: 20px;
   font-family: sans-serif;
   letter-spacing: 1px;
+  margin-left: 50px;
 }
 
 .username {
