--- a/server/public/index.css
+++ b/server/public/index.css
@@ -40,7 +40,7 @@ h1 {
   font-family: sans-serif;
   letter-spacing: 1px;
   position: absolute;
-  left: 10px;
+  left: 25px;
 }
 
 .red {
@@ -49,10 +49,11 @@ h1 {
   border-radius: 20px;
   color: black;
   box-sizing: border-box;
-  padding: 8px 0 8px 0;
+  padding: 12px 0 12px 0;
   font-family: sans-serif;
   letter-spacing: 1px;
-  margin-left: 110px;
+  margin-left: 140px;
+  width: 800px;
 }
 
 .blue {
@@ -61,10 +62,11 @@ h1 {
   border-radius: 20px;
   color: black;
   box-sizing: border-box;
-  padding: 8px 0 8px 0;
+  padding: 12px 0 12px 0;
   font-family: sans-serif;
   letter-spacing: 1px;
-  margin-left: 110px;
+  margin-left: 140px;
+  width: 800px;
 }
 
 .green {
@@ -73,10 +75,11 @@ h1 {
   border-radius: 20px;
   color: black;
   box-sizing: border-box;
-  padding: 8px 0 8px 0;
+  padding: 12px 0 12px 0;
   font-family: sans-serif;
   letter-spacing: 1px;
-  margin-left: 110px;
+  margin-left: 140px;
+  width: 800px;
 }
 
 .yellow {
@@ -85,10 +88,11 @@ h1 {
   border-radius: 20px;
   color: black;
   box-sizing: border-box;
-  padding: 8px 0 8px 0;
+  padding: 12px 0 12px 0;
   font-family: sans-serif;
   letter-spacing: 1px;
-  margin-left: 110px;
+  margin-left: 140px;
+  width: 800px;
 }
 
 input[type="radio"] {
@@ -117,4 +121,17 @@ label {
 
 .hide {
   display: none;
+}
+
+.login {
+  margin-top: 8%;
+  margin-left: 15%;
+  margin-right: 15%;
+  background-color: #66ff66;
+  height: 230px;
+  padding: 20px;
+  padding-top: 40px;
+  box-sizing: border-box;
+  border-radius: 20px;
+box-shadow: 7px 10px 34px 1px rgba(0, 0, 0, 0.12), inset -1px -6px 12px 0.1px #33ff33;
 }
