--- a/server/public/index.css
+++ b/server/public/index.css
@@ -14,13 +14,14 @@ h1 {
 }
 
 .input {
-  width: 79%;
+  width: 70%;
   height: 50px;
   text-align: center;
   float: left;
   font-size: 16px;
   font-family: sans-serif;
   letter-spacing: 1px;
+  margin-left: 70px;
 }
 
 #submit {
