connected emoji component to App

--- a/server/public/index.css
+++ b/server/public/index.css
@@ -143,3 +143,18 @@ label {
   border-radius: 20px;
 box-shadow: 7px 10px 34px 1px rgba(0, 0, 0, 0.12), inset -1px -6px 12px 0.1px #b3b3b3;
 }
+
+.emojiPickerStyles = {
+  position: 'absolute',
+  left: 0, top: '3.9rem',
+  backgroundColor: 'white',
+  width: '100%',
+  padding: '.3em .6em',
+  border: '1px solid #0074d9',
+  borderTop: 'none',
+  zIndex: '2'
+};
+
+p {
+  font-size: 100px;
+}
