--- a/server/public/index.css
+++ b/server/public/index.css
@@ -144,17 +144,162 @@ label {
 box-shadow: 7px 10px 34px 1px rgba(0, 0, 0, 0.12), inset -1px -6px 12px 0.1px #b3b3b3;
 }
 
-.emojiPickerStyles = {
-  position: 'absolute',
-  left: 0, top: '3.9rem',
-  backgroundColor: 'white',
-  width: '100%',
-  padding: '.3em .6em',
-  border: '1px solid #0074d9',
-  borderTop: 'none',
-  zIndex: '2'
-};
+.emoji-dialog {
+  width: 276px;
+  height: 220px;
+  background: #fff;
+  box-sizing: border-box;
+  border-radius: 2px;
+  overflow: hidden;
+  position: relative;
+  box-shadow: 0 0 0 1px rgba(0,0,0,0.1), 0 2px 15px rgba(0,0,0,0.1);
+}
 
-p {
-  font-size: 100px;
+.emoji-dialog .emoji-dialog-header {
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 42px;
+  padding: 0 10px;
+  background-color: #F5F7F9;
+}
+
+.emoji-dialog .emoji-dialog-header ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.emoji-dialog .emoji-dialog-header li {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 32px;
+  height: 42px;
+  padding: 9px 4px;
+}
+
+.emoji-dialog .emoji-dialog-header img {
+  width: 22px;
+  height: 22px;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+}
+
+.emoji-dialog .emoji-dialog-header li.active {
+  background: #fff;
+}
+
+.emoji-dialog .emoji-dialog-header li.active img {
+  -webkit-filter: grayscale(0);
+  filter: grayscale(0);
+}
+
+.emoji-dialog .emoji-grandlist {
+  position: absolute;
+  top: 42px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 10px;
+  box-sizing: border-box;
+  width: 100%;
+  height: calc(100% - 42px);
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.emoji-dialog .emoji-category-list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.emoji-dialog .emoji-category-list li {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 32px;
+  height: 32px;
+  padding: 4px;
+  border-radius: 4px;
+}
+
+.emoji-dialog .emoji-category-header {
+  margin-top: 10px;
+  margin-bottom: 8px;
+  font-size: 18px;
+  font-family: sans-serif;
+  font-weight: normal;
+  color: #444;
+  padding: 0 4px;
+}
+
+.emoji-dialog .modifiers {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  top: 22px;
+  right: 15px;
+}
+
+.emoji-dialog.with-search .modifiers {
+  top: 52px;
+}
+
+.emoji-dialog .modifiers li {
+  display: inline-block;
+  padding: 0 2px;
+}
+
+.emoji-dialog .modifiers .modifier {
+  display: inline-block;
+  border-radius: 10px;
+  width: 15px;
+  height: 15px;
+  position: relative;
+}
+
+.emoji-dialog .modifiers .modifier.active::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 7px;
+  height: 7px;
+  border-radius: 10px;
+  border: 2px solid #fff;
+  top: 2px;
+  left: 2px;
+}
+
+.emoji-dialog .modifiers li:hover {
+  -moz-transition-duration: 200ms;
+  -webkit-transition-duration: 200ms;
+  transition-duration: 200ms;
+
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  transform: scale(1.2);
+}
+
+.emoji-dialog .emoji-search-wrapper {
+  padding: 0 5px;
+}
+
+.emoji-dialog .emoji-search {
+  font-size: 12px;
+  padding: 6px 4px;
+  width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.emoji-dialog .emoji-category-list li:hover {
+  background: #F5F7F9;
+}
+
+.emoji-dialog .emoji-category-list .emoji img {
+  width: 22px;
+  height: 22px;
 }
